# starter-kit-service-fastapi

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  run.py
.devcontainer/: Dockerfile  devcontainer.json
app/: main.py
app/api/: dependencies.py  routes.py
app/core/: config.py
app/db/: session.py
app/models/: database.py  todo.py
tests/: test_todos.py
